@@ -11,6 +11,7 @@ cgrates (0.10.3~dev) UNRELEASED; urgency=medium
   * [FilterS] Optimized the automated index fields matching
   * [AgentS] Added *routes_maxcost flag
   * [SessionS] Replaced max_call_duration config with default_usage for each ToR
+  * [SessionS] The sessions are no longer terminated on shutdown if the replication_conns are set
 
  -- DanB <danb@cgrates.org>  Thu, 08 Oct 2020 16:23:58 +0300
 
